[project]
name = "pnnl-hub-voltage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.125.0",
    "helics>=3.4.0",
    "helics-apps>=3.4.0",
    "numpy>=2.4.3",
    "oedisi~=3.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pydantic",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
    "xarray>=2026.2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "requests>=2.31",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
